# esp-fan-controller

./: Cargo.toml
.cargo/: config.toml
src/: display.rs  main.rs
