[package]
name = "esp-fan-controller"
version = "0.1.0"
authors = ["Thor Mortensen <tm@connectedcars.dk>"]
edition = "2021"
resolver = "2"


[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = "0.45.0"
esp-idf-hal = "0.40.1"
embedded-svc = "0.24"
# embedded-hal = "0.2.7"
embedded-hal = { version = "0.2.7", package="embedded-hal"  }
display-interface-parallel-gpio = "0.6.0"
embedded-graphics-sparklines = "0.1.0"
rand = "0.8.5"
embedded-text = "0.5.0"
derive_builder = "0.12.0"

embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
mipidsi = "0.6.0"
ssd1306 = "0.7"
epd-waveshare = "0.5.0"
# smol = "1.2"
# slint = "0.3.4"
ringbuf = "0.3.2"
lazy_static = "1.4.0"

[build-dependencies]
embuild = { version = "0.31", features = ["elf"] }
anyhow = "1"